Nuevo avance del día 13/06
Se agregó un floating action buttom para agregar clientes, se crearon 2 actividades "EditarCliente" (en la cuál se realizó el diseño en xml) y "AgregarCliente",

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,16 @@
         </activity>
         <activity
             android:name=".Second_Activity"
-            android:parentActivityName=".MainActivity"
             android:label="@string/title_activity_second_"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Ventas_Activity"
+            android:label="Ventas Activity"
+            android:parentActivityName=".Second_Activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".EditarClientes" />
+        <activity android:name=".AgregarCliente" />
     </application>
 
 </manifest>
