--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,14 @@
             android:label="Ventas Activity"
             android:parentActivityName=".Second_Activity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".EditarClientes" />
-        <activity android:name=".AgregarCliente" />
+        <activity
+            android:name=".EditarClientes"
+            android:label="Editar_Clientes"
+            android:parentActivityName=".Second_Activity"/>
+        <activity
+            android:name=".AgregarCliente"
+            android:label="Agregar_Clientes"
+            android:parentActivityName=".Second_Activity"/>
     </application>
 
 </manifest>
