--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:name=".AgregarCliente"
             android:label="Agregar_Clientes"
             android:parentActivityName=".Second_Activity" />
+        <activity android:name=".Detalle_CargasyDescargas"></activity>
     </application>
 
 </manifest>
