--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="Ingresar a Aqua Vital">
+            android:label="Aqua Vital">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
