--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        debug {
+           applicationIdSuffix ".debug"
         }
     }
 }
