--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="Beta 3.2">
+            android:label="Hotfix1.2-Beta 3.2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
