--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Aqua Vital"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="Beta 3.2.1">
+            android:label="Beta 3.2.2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,20 +30,20 @@
         </activity>
         <activity
             android:name=".Second_Activity"
-            android:label="@string/title_activity_second_"
+            android:label="En Reparto"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="Días de reparto"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".LoginActivity">
         </activity>
 
         <activity
             android:name=".Ventas_Activity"
-            android:label="Ventas Activity"
+            android:label="Ventas"
             android:parentActivityName=".Second_Activity"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
@@ -55,7 +55,7 @@
 
         <activity
             android:name=".EditarClientes"
-            android:label="Editar_Clientes" />
+            android:label="Editar Clientes" />
         <activity
             android:name=".AgregarCliente"
             android:label="Agregar_Clientes" />
