--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,14 @@
         <!--########################## Para SUPERVISORES ###########################-->
 
 
+
+        <activity android:name=".CombustibleEstadisticas"
+            android:label=""
+            android:screenOrientation="landscape"/>
+
+        
+
+
         <activity android:name=".NuevoEventoPatrocinio"
                   android:label="Nuevo Evento"
                   android:theme="@style/AppTheme.NoActionBar">
@@ -119,11 +127,6 @@
         <activity android:name=".NuevoResponsablePatrocinio"
                   android:label="Nuevo Responsable"
                   android:theme="@style/AppTheme.NoActionBar"/>
-
-
-        <activity android:name=".CombustibleEstadisticas"
-                  android:label=""/>
-
 
 
         <activity
