StatusBar en todas las activitys Supervisores
En todas las activitys de supervisores se ha agregado mediante código JAVA el color para el StatusBar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,10 +93,11 @@
 
 
         <activity android:name=".CombustibleEstadisticas"
-            android:label=""
-            android:screenOrientation="landscape"/>
+                  android:label=""
+                  android:theme="@style/AppTheme.NoActionBar"
+                  android:screenOrientation="landscape"/>
 
-        
+
 
 
         <activity android:name=".NuevoEventoPatrocinio"
