--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,16 +59,18 @@
             android:name=".Ventas_Activity"
             android:label="Ventas"
             android:parentActivityName=".Repartidores_Main_Activity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
             android:name=".EditarClientes"
-            android:label="Editar Clientes" />
+            android:label="Editar Clientes"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
         <activity
             android:name=".AgregarCliente"
-            android:label="Agregar_Clientes" />
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
         <activity
