entrega_retiro_patrocinio repartidores y supervisores eito
Se ve bien ahora el diseño XML

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,7 +128,7 @@
 
 
         <activity android:name=".NuevoResponsablePatrocinio"
-                  android:label="Nuevo Responsable"
+                  android:label=""
                   android:theme="@style/AppTheme.NoActionBar"/>
 
 
