--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jumpi.repartidores_aplication">
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo_app_prueba1"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -21,176 +11,122 @@
 
 
 
+
         <activity
             android:name=".LoginActivity"
             android:label="Beta 3.2.3">
-
-
-
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
-
-
             </intent-filter>
-
-
-        </activity>
-
-
-
-<!--#################### Para REPARTIDORES ###########################-->
-
-
-
+        </activity> <!-- #################### Para REPARTIDORES ########################### -->
         <activity
             android:name=".Repartidores_Main_Activity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-    </activity>
-
-
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".Ventas_Activity"
             android:label="Ventas"
             android:parentActivityName=".Repartidores_Main_Activity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".EditarClientes"
             android:label="Editar Clientes"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AgregarCliente"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Detalle_Envases"
             android:label="Detalle de Cargas y Descargas" />
-
-
-
         <activity
             android:name=".Detalle_Articulos"
             android:label="Detalle de Cargas y Descargas" />
-
-
         <activity
             android:name=".Detalle_Dinero"
             android:label="Detalle de Entregas de Dinero" />
 
 
 
-        <!--########################## Para SUPERVISORES ###########################-->
+        <!-- ########################## Para SUPERVISORES ########################### -->
 
+        <activity
+            android:name=".CombustibleEstadisticas"
+            android:label=""
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".VentaBidonesEstadisticas"
 
-        <activity android:name=".CombustibleEstadisticas"
-                  android:label=""
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="landscape"/>
+            android:label=""
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar">
 
-
-
-
-        <activity android:name=".NuevoEventoPatrocinio"
-                  android:label=""
-                  android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
 
 
+
+
+        <activity
+            android:name=".NuevoEventoPatrocinio"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".BuscarResponsableParaPatrocinio"
             android:label="Buscar"
             android:theme="@style/AppTheme.NoActionBar" />
-
-
-
         <activity
             android:name=".EntregaRetiroEnvasesPatrocinio"
             android:configChanges="screenSize|orientation"
             android:label=" "
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateAlwaysVisible" />
-
-
-
-
-
-        <activity android:name=".NuevoResponsablePatrocinio"
-                  android:label=""
-                  android:theme="@style/AppTheme.NoActionBar"/>
-
-
+        <activity
+            android:name=".NuevoResponsablePatrocinio"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".BuscarClienteParaRealizarVenta"
             android:label="Buscar Cliente" />
-
-
-
         <activity
             android:name=".RealizarVentasClientesSupervisor"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
-
-
-
         <activity
             android:name=".ComisionesEstadisticas"
             android:label="@string/title_activity_envases"
             android:theme="@style/AppTheme.NoActionBar" />
-
-
-
-        <activity android:name=".OpcionesEstadisticas"
-                  android:label="Opciones de Estadísticas"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-
-
-
-
+        <activity
+            android:name=".OpcionesEstadisticas"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".EleccionRepartidores"
             android:label="Elija un Repartidor"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Cargas_Descargas"
             android:configChanges="screenSize|orientation"
             android:label="@string/title_activity_cargas_descargas"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateAlwaysVisible" />
-
-
         <activity
             android:name=".MainActivity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-
-
-
-
-
-
-
-
-
-
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
 </manifest>
