Modificacion Nuevo Cliente y Stock_vehiculo
Se ha arreglado algunas cosas, cambio de diseño en Stock_en_Vehiculo fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- #################### Para REPARTIDORES ########################### -->
+        </activity>
+
+
+
+        <!-- #################### Para REPARTIDORES ########################### -->
+
+
         <activity
             android:name=".Repartidores_Main_Activity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
-    </activity>
+        </activity>
 
 
         <activity
