Activitys de DETALLES stock_vehiculo---COMIENZO
Se ha comenzado a preparar el diseño de estas activitys

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,13 +45,16 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Detalle_Envases"
-            android:label="Detalle de Cargas y Descargas" />
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Detalle_Articulos"
-            android:label="Detalle de Cargas y Descargas" />
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Detalle_Dinero"
-            android:label="Detalle de Entregas de Dinero" />
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
 
