--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jumpi.repartidores_aplication">
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
+
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo_app_prueba1"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
 
 
         <activity
@@ -24,17 +30,16 @@
 
 
 
+
         <!-- #################### Para REPARTIDORES ########################### -->
+
 
 
         <activity
             android:name=".Repartidores_Main_Activity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".EditarClientes"
             android:label="Editar Clientes"
@@ -46,42 +51,40 @@
         <activity
             android:name=".Detalle_Envases"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Detalle_Articulos"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Detalle_Dinero"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-
-
-        <!-- ########################## Para SUPERVISORES ########################### -->
-
-        <activity
-            android:name=".CombustibleEstadisticas"
-            android:label=""
-            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".VentaBidonesEstadisticas"
 
-            android:label=""
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Detalle_Faltante_Sobrante_Envases"
+                  android:label=""
+                  android:theme="@style/AppTheme.NoActionBar" >
 
 
         </activity>
 
 
-
-
+        <!-- ########################## Para SUPERVISORES ########################### -->
+        <activity
+            android:name=".CombustibleEstadisticas"
+            android:label=""
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".VentaBidonesEstadisticas"
+            android:label=""
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".NuevoEventoPatrocinio"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".BuscarResponsableParaPatrocinio"
             android:label="Buscar"
@@ -127,13 +130,5 @@
             android:parentActivityName=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
 </manifest>
