aumento tamaño de datospersonales VENTAS
Se aumento el largo del LinearLayout de datos personales de las Ventas Clientes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="Beta 3.2.3">
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
