--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ android {
 
 repositories {
     maven { url 'https://jitpack.io' }
+
+    mavenCentral()
 }
 
 dependencies {
@@ -35,5 +37,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
+
+    compile 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 
 }
