--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
 
-    compile 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
+    implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 
 }
