Ultimo Commit antes de la Prueba GeoJson
Cambios hechos:
1) se ha quitado la pestaña de "mapa"
2) se ha añadido un mapa de repartidores con navigatión
3) Se añadió un mapa para supervisores.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jumpi.repartidores_aplication">
 
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -10,9 +11,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".Frecuencia_De_Consumo"
+            android:label="@string/title_activity_frecuencia__de__consumo"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".LoginActivity"
             android:label=""
@@ -33,50 +35,81 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             -->
-        </activity>
 
-
-
-        <!-- #################### Para REPARTIDORES ########################### -->
+        </activity> <!-- #################### Para REPARTIDORES ########################### -->
         <activity
             android:name=".Repartidores_Main_Activity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".EditarClientes"
-            android:label="Editar Clientes"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".AgregarCliente"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Detalle_Envases"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Detalle_Articulos"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Detalle_Dinero"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".Detalle_Faltante_Sobrante_Envases"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" /> <!-- ########################## Para SUPERVISORES ########################### -->
+            android:theme="@style/AppTheme.NoActionBar">
+          <intent-filter>
+              <action android:name="android.intent.action.MAIN" />
+
+              <category android:name="android.intent.category.LAUNCHER" />
+          </intent-filter>
+
+      </activity>
+
+
+
+      <activity
+          android:name=".Mapa_Repartidores"
+          android:label=""
+          android:parentActivityName=".Repartidores_Main_Activity"
+          android:theme="@style/AppTheme.NoActionBar">
+
+        <!--
+
+      <intent-filter>
+          <action android:name="android.intent.action.MAIN" />
+
+          <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+-->
+
+  </activity>
+
+
+
+
+  <activity
+      android:name=".EditarClientes"
+      android:label="Editar Clientes"
+      android:theme="@style/AppTheme.NoActionBar" />
+  <activity
+      android:name=".AgregarCliente"
+      android:label=""
+      android:theme="@style/AppTheme.NoActionBar" />
+  <activity
+      android:name=".Detalle_Envases"
+      android:label=""
+      android:theme="@style/AppTheme.NoActionBar" />
+  <activity
+      android:name=".Detalle_Articulos"
+      android:label=""
+      android:theme="@style/AppTheme.NoActionBar" />
+  <activity
+      android:name=".Detalle_Dinero"
+      android:label=""
+      android:theme="@style/AppTheme.NoActionBar" />
+  <activity
+      android:name=".Detalle_Faltante_Sobrante_Envases"
+      android:label=""
+      android:theme="@style/AppTheme.NoActionBar" /> <!-- ########################## Para SUPERVISORES ########################### -->
         <activity
             android:name=".MainActivity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--
+                                    <intent-filter>
+                                        <action android:name="android.intent.action.MAIN" />
+
+                                        <category android:name="android.intent.category.LAUNCHER" />
+                                    </intent-filter>
+            -->
+
         </activity>
         <activity
             android:name=".CombustibleEstadisticas"
@@ -135,13 +168,10 @@
             android:name=".DatosPersonalesResponsable"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
-
-
         <activity
             android:name=".Mapa_Supervisores"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
