--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,19 +7,34 @@ android {
     defaultConfig {
         applicationId "com.example.jumpi.repartidores_aplication"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+
     }
 
 
     buildTypes {
+
         release {
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
         }
     }
+
+
+    compileOptions {
+
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+
+
+    }
+
 }
 
 
@@ -27,23 +42,50 @@ repositories {
     maven { url 'https://jitpack.io' }
 
     mavenCentral()
+
+    maven { url 'https://mapbox.bintray.com/mapbox' }
+
+
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     //noinspection GradleCompatible
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation 'com.android.volley:volley:1.1.0'
+
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
     implementation 'com.github.bumptech.glide:glide:3.6.1'
 
     implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.6.2'
+
+    implementation 'com.google.android.material:material:1.1.0'
+
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.5'
+
+
 }
