ultimo commit 02-04: BuscadorDeClientesVENTAS
Se logró lo siguiente:
1) Crear una lista de clientes (cada item_cliente se creó de forma manual), con el SearchView es posible filtrar la busqueda a partir del "Nombre" (debo arreglar y cambiar que se busque mejor por apellido).

2) al hacer click sobre un cliente se abrirá un cuadro de dialogo con algunos datos del cliente y 3 botones: 

3) estos 3 botones son: Realizar ventas: del cual pasamos todos los datos del cliente (hasta su foto)

el 2do botón es edita o ver datos personales del cliente: también podemos pasar todos los datos personales del cliente. Falta guardar los cambios de edición.

por último el 3er botón que es eliminar un cliente, ese falta hacerlo.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,13 @@
             </intent-filter>
 
 
-        </activity> <!-- #################### Para REPARTIDORES ########################### -->
+        </activity>
+
+
+
+
+
+        <!-- #################### Para REPARTIDORES ########################### -->
         <activity
             android:name=".Repartidores_Main_Activity"
             android:label=" "
@@ -145,7 +151,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".BuscarClienteParaRealizarVenta"
-            android:label="Buscar Cliente" />
+            android:label="Buscar Cliente"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".RealizarVentasClientesSupervisor"
             android:label=""
