--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,17 +75,21 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.0'
 
+    //Librería para los gráficos de barra
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
     implementation 'com.github.bumptech.glide:glide:3.6.1'
 
     implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 
+    //Librería para los mapas en Mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.6.2'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.5'
+
 
     implementation 'com.google.android.material:material:1.1.0'
 
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.5'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
 
 
 }
