--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,13 @@
             android:label=""
             android:theme="@style/AppTheme.NoActionBar">
 
-
+<!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+-->
 
         </activity>
 
@@ -114,11 +114,11 @@
             android:theme="@style/AppTheme.NoActionBar">
 
 
-                                 <!--   <intent-filter>
+                                    <intent-filter>
                                         <action android:name="android.intent.action.MAIN" />
 
                                         <category android:name="android.intent.category.LAUNCHER" />
-                                    </intent-filter> -->
+                                    </intent-filter>
 
         </activity>
         <activity
