varios cambios en utilRequest
siguiente paso modificar login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:label="Beta 3.2.3">
 
 
-
+<!--
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +36,7 @@
 
 
             </intent-filter>
-
+-->
 
         </activity>
 
@@ -178,16 +178,20 @@
             android:name=".MainActivity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar">
 
 
 
+                    <intent-filter>
+
+                        <action android:name="android.intent.action.MAIN" />
+
+                        <category android:name="android.intent.category.LAUNCHER" />
 
 
 
-
-
-
+                    </intent-filter>
+        </activity>
 
 
     </application>
