--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
-        <activity
-            android:name=".Frecuencia_De_Consumo"
-            android:label="@string/title_activity_frecuencia__de__consumo"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LoginActivity"
             android:label=""
@@ -45,16 +40,19 @@
 
         <!-- #################### Para REPARTIDORES ########################### -->
 
+
         <activity
             android:name=".Repartidores_Main_Activity"
             android:label=" "
             android:parentActivityName=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
+
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>     -->
         </activity>
 
 
@@ -78,22 +76,22 @@
         <activity
             android:name=".NavigationRepartidores"
             android:label=""
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".RealizarVentasClientesRepartidor"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
 
         <activity
             android:name=".EditarClientes"
             android:label="Editar Clientes"
             android:theme="@style/AppTheme.NoActionBar" />
-
-
         <activity
             android:name=".AgregarCliente"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
-
-
         <activity
             android:name=".Detalle_Envases"
             android:label=""
@@ -114,6 +112,7 @@
 
 
 
+
         <!-- ########################## Para SUPERVISORES ########################### -->
         <activity
             android:name=".MainActivitySupervisores"
@@ -121,13 +120,14 @@
             android:parentActivityName=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
-            <!--
+
                                     <intent-filter>
                                         <action android:name="android.intent.action.MAIN" />
 
                                         <category android:name="android.intent.category.LAUNCHER" />
                                     </intent-filter>
-            -->
+
+
         </activity>
         <activity
             android:name=".CombustibleEstadisticas"
@@ -191,6 +191,13 @@
             android:name=".Mapa_Supervisores"
             android:label=""
             android:theme="@style/AppTheme.NoActionBar" />
+
+
+        <activity
+            android:name=".Frecuencia_De_Consumo"
+            android:label="@string/title_activity_frecuencia__de__consumo"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
